examples/test/testpolicy2189.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2189
  namespace: namespace233
spec:
  podSelector:
    matchLabels:
      key3: value45
      key20: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value49
          key30: value41
          key26: value22
      podSelector:
        matchLabels:
          key30: value8
          key32: value23
